<resources>
    <string name="app_name">Blackbox Prime</string>
    <string name="choose">Choose</string>
    <string name="choose_app">Choose App</string>
    <string name="installed_app">Installed Apps</string>
    <string name="installed_module">Installed Module</string>
    <string name="empty_empty">Empty</string>
    <string name="filter">Filter</string>
    <string name="open_source_path">Open Source</string>
    <string name="xp_setting">Xposed Setting</string>
    <string name="tg_group">Telegram Channel</string>
    <string name="fake_location">Fake Location</string>
    <string name="real_location">Real Location</string>
    <string name="set_location">Set Fake Location Successfully:%1$s-%2$s</string>
    <string name="close_fake_location">Disable FakeLocation</string>
    <string name="close_app_fake_location">Disable FakeLocation for %s</string>
    <string name="close_fake_location_success">Disable FakeLocation for %s Successfully</string>
    <string name="setting">Settings</string>
    <string name="jump_module">Go to Module Manager</string>
    <string name="module_setting">Module Manager</string>
    <string name="enable_xposed">Enable Xposed Framework</string>
    <string name="hider">Hide</string>
    <string name="hide_root">Hide Root</string>
    <string name="hide_xposed">Hide Xposed</string>
    <string name="userRemark">User Remark</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="permission_setting">Settings</string>
    <string name="no_reminders">No Reminders</string>
    <string name="app_stop">Stop Running</string>
    <string name="app_stop_hint">Do you want to stop %s forcibly?</string>
    <string name="is_stop">%s is Stopped</string>
    <string name="app_clear">Clear Data</string>
    <string name="app_clear_hint">Clear Data for %s?</string>
    <string name="app_remove">Uninstall App</string>
    <string name="app_shortcut">Create Shortcut</string>
    <string name="shortcut_name">Shortcut Name</string>
    <string name="try_add_shortcut">Try Added To Desktop</string>
    <string name="add_shortcut_fail_msg">If the addition fails, please go to system settings and open the permission of "create desktop shortcut" for Blackbox Prime</string>
    <string name="install_success">Installed Successfully</string>
    <string name="install_fail">Installed Failed: %s</string>
    <string name="install_fail_no_msg">Installed Failed</string>
    <string name="uninstall_success">Uninstalled Successfully</string>
    <string name="uninstall_fail">Uninstalled Failed</string>
    <string name="uninstall_app">Uninstall App</string>
    <string name="uninstall_app_hint">Uninstall %s, and relevant data will be cleared after uninstallation?</string>
    <string name="uninstall_module">Uninstall Module</string>
    <string name="uninstall_module_hint">Do you want to uninstall this module? It will no longer work after uninstallation?</string>
    <string name="remove_success">Removed Successfully</string>
    <string name="clear_success">Cleared Successfully</string>
    <string name="start_fail">Launched Failed</string>
    <string name="start_in_outside">Start module in outside</string>
    <string name="restart_module">Restart app to apply change</string>
    <string name="cannot_create_shortcut">This desktop does not support creating shortcuts</string>
    <string name="uninstall_module_toast">Please uninstall the xposed module in the Module Manager</string>
    <string name="other">Others</string>
    <string name="daemon_enable">Daemon</string>
    <string name="use_vpn_network">Use VPN Network</string>
    <string name="use_vpn_network_summary">Route traffic through VPN for sandboxed apps</string>
    <string name="disable_flag_secure">Disable Flag Secure</string>
    <string name="disable_flag_secure_summary">Allow screenshots and screen recording in apps</string>
    <string name="gms_manager">GMS Manager</string>
    <string name="jump_gms">Go to Gms Manager</string>
    <string name="enable_gms">Enable Service</string>
    <string name="enable_gms_hint">Open Google services to make YouTube and other apps work normally.</string>
    <string name="disable_gms">Disable Service</string>
    <string name="disable_gms_hint">Clear the current Google service environment?</string>
    <string name="no_gms">No Google service environment on this device.</string>
    <string name="language_setting">Language</string>
    <string name="language_setting_summary">Change the app language</string>
    <string name="theme_setting">Theme</string>
    <string name="theme_setting_summary">Select your preferred theme</string>
    <string name="about">About</string>
    <string name="about_summary">Blackbox Prime - Virtual Engine</string>
    <string name="version">Version %s</string>
    <string name="language_system">System Default</string>
    <string name="language_en">English</string>
    <string name="language_ar">Arabic</string>
    <string name="language_es">Spanish</string>
    <string name="language_fr">French</string>
    <string name="language_zh_cn">Chinese (Simplified)</string>
    <string name="language_zh_tw">Chinese (Traditional)</string>
    <string name="nav_menu">Menu</string>
    <string name="tools_label">Tools</string>
    <string name="settings_label">Settings</string>
    <string name="store_title">Internal Store</string>
    <string name="store_search_hint">Search apps &amp; addons...</string>
    <string name="store_install">Install</string>
    <string name="store_installed">Installed</string>
    <string name="store_installing">Installing %s...</string>
    <string name="store_category_all">All</string>
    <string name="store_category_games">Games</string>
    <string name="store_category_tools">Tools</string>
    <string name="store_category_social">Social</string>
    <string name="quick_tools">Quick Tools</string>
    <string name="tool_app_cloner">App Cloner</string>
    <string name="tool_file_manager">File Manager</string>
    <string name="tool_short_clone">Clone</string>
    <string name="tool_short_files">Files</string>
    <string name="tool_short_boost">Boost</string>
    <string name="tool_short_privacy">Privacy</string>
    <string name="tool_short_camera">Camera</string>
    <string name="memory_booster">Memory Booster</string>
    <string name="memory_booster_started">Memory cleared successfully</string>
    <string name="privacy_guard">Privacy Guard</string>
    <string name="privacy_guard_active">Privacy Guard enabled</string>
    <string name="onboarding_title">Welcome to Blackbox Prime</string>
    <string name="onboarding_subtitle">Your premium virtual environment platform.\nChoose your preferred theme and language to get started.</string>
    <string name="onboarding_select_theme">Choose Your Theme</string>
    <string name="onboarding_select_language">Choose Language</string>
    <string name="onboarding_get_started">Get Started</string>
    <string name="onboarding_welcome">Welcome aboard!</string>
    <string name="theme_cosmic">Cosmic</string>
    <string name="theme_amoled">AMOLED Black</string>
    <string name="theme_neon">Neon</string>
    <string name="theme_forest">Forest</string>
    <string name="theme_ocean">Ocean</string>
    <string name="theme_sunset">Sunset</string>
    <string name="theme_picker">Select Theme</string>
    <string name="theme_restart">Restart app to apply theme</string>
    <string name="virtual_camera_title">Virtual Camera</string>
    <string name="virtual_camera_mode">Camera Mode</string>
    <string name="virtual_camera_off">Off (Use real camera)</string>
    <string name="virtual_camera_disable">Disable camera</string>
    <string name="virtual_camera_local">Local video</string>
    <string name="virtual_camera_network">Network video</string>
    <string name="virtual_camera_local_title">Select Video</string>
    <string name="virtual_camera_no_video">No video selected</string>
    <string name="virtual_camera_pick_video">Choose Video</string>
    <string name="virtual_camera_network_title">Network Stream</string>
    <string name="virtual_camera_url_hint">Video URL (RTSP/HTTP)</string>
    <string name="virtual_camera_audio">Audio</string>
    <string name="virtual_camera_saved">Settings saved</string>
    <string name="virtual_camera_select_video_first">Please select a video first</string>
    <string name="virtual_camera_enter_url">Please enter a video URL</string>
    <string name="virtual_camera_status_off">Status: Off</string>
    <string name="virtual_camera_status_disabled">Status: Camera disabled</string>
    <string name="virtual_camera_status_local">Status: Using local video</string>
    <string name="virtual_camera_status_network">Status: Using network video</string>
    <string name="welcome_tagline">Virtual Engine \u00B7 Privacy \u00B7 Freedom</string>
    <string name="kill_all_apps">Kill All Apps</string>
    <string name="kill_all_apps_hint">Stop all running virtual apps?</string>
    <string name="kill_all_apps_done">All apps stopped</string>
    <string name="search_apps">Search apps...</string>
    <string name="no_apps_installed">No apps installed yet.\nTap + to add an app.</string>
    <string name="drag_to_reorder">Drag to reorder</string>
    <string name="app_running">Running</string>
    <string name="filter_none">None</string>
    <string name="filter_grayscale">Grayscale</string>
    <string name="filter_sepia">Sepia</string>
    <string name="filter_invert">Invert Colors</string>
    <string name="filter_brightness">Brightness</string>
    <string name="filter_contrast">Contrast</string>
    <string name="filter_blur">Blur</string>
    <string name="virtual_camera_filters">Filters</string>
    <string name="virtual_camera_loop">Loop Video</string>
    <string name="virtual_camera_preview_size">Preview Size</string>
    <string name="virtual_camera_resolution">Resolution</string>
    <string name="spoof_manager_title">Device Identity Spoof</string>
    <string name="spoof_manager_summary">Per-app custom IMEI, Android ID, MAC, and device model</string>
    <string name="spoof_enable_spoofing">Enable Identity Spoofing</string>
    <string name="spoof_identity">Identity</string>
    <string name="spoof_device_info">Device Info</string>
    <string name="spoof_imei">IMEI</string>
    <string name="spoof_android_id">Android ID</string>
    <string name="spoof_mac_address">MAC Address</string>
    <string name="spoof_serial_number">Serial Number</string>
    <string name="spoof_sim_serial">SIM Serial</string>
    <string name="spoof_phone_number">Phone Number</string>
    <string name="spoof_model">Model</string>
    <string name="spoof_manufacturer">Manufacturer</string>
    <string name="spoof_brand">Brand</string>
    <string name="spoof_device_name">Device</string>
    <string name="spoof_fingerprint">Fingerprint</string>
    <string name="spoof_hardware">Hardware</string>
    <string name="spoof_generate">Generate Random</string>
    <string name="spoof_save">Save Configuration</string>
    <string name="spoof_reset">Reset to Default</string>
    <string name="spoof_saved">Configuration saved</string>
    <string name="spoof_reset_done">Reset to default</string>
    <string name="spoof_no_package">No package specified</string>
    <string name="spoof_presets">Device Presets</string>
    <string name="spoof_apply_preset">Apply Preset</string>
    <string name="spoof_preset_applied">Applied preset: %s</string>
    <string name="spoof_select_app">Select an app to configure spoofing</string>
    <string name="privacy_shield">Privacy Shield</string>
    <string name="privacy_shield_active">Privacy Shield active - blocking detection</string>
    <string name="privacy_shield_desc">Bypass SafetyNet, Play Integrity, and anti-virtual detection</string>
    <string name="overlay_start">Start Floating Overlay</string>
    <string name="nav_spoof_manager">Device Spoof</string>
</resources>