<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/main_setting"
            android:title="@string/setting"
            app:showAsAction="never" />

    <item
        android:id="@+id/virtual_camera"
        android:title="@string/virtual_camera_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/spoof_manager"
        android:title="@string/nav_spoof_manager"
        app:showAsAction="never" />

    <item
        android:id="@+id/kill_all_apps"
        android:title="@string/kill_all_apps"
        app:showAsAction="never" />

    <item
        android:id="@+id/fake_location"
        android:title="@string/fake_location"
        app:showAsAction="never" />

    <item
            android:id="@+id/main_github"
            android:title="@string/open_source_path"
            app:showAsAction="never" />

    <item
            android:id="@+id/main_tg"
            android:title="@string/tg_group"
            app:showAsAction="never" />
</menu>